tests/health/gold/sdk/tests__lsp__return-label-definition-test.toit.gold
tests/lsp/return-label-definition-test.toit:16:12: error: Unresolved label 'foo'
  continue.foo
           ^~~
tests/lsp/return-label-definition-test.toit:98:16: error: Can't return out of lambda
      continue.foo
               ^~~
